add url different from api

--- a/EmployeesWebApp.csproj
+++ b/EmployeesWebApp.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <OutputType>Exe</OutputType>
+    <PublishSingleFile>true</PublishSingleFile>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>EmployeesWebApp</RootNamespace>
   </PropertyGroup>
