--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -9,6 +9,16 @@
     }
   },
   "profiles": {
+    "EmployeesWebApp": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:5001;https://localhost:5002",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
